--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,20 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+  <ion-content class="ion-padding">
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v3">docs</a> will be your guide.
-  </p>
-</ion-content>
+    <h1 align="center" id="title">Join a video session</h1>
+    <ion-item>
+      <ion-label position="floating">Participant</ion-label>
+      <ion-input [(ngModel)]="myUserName"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Session</ion-label>
+      <ion-input [(ngModel)]="mySessionId"></ion-input>
+    </ion-item>
+
+    <button ion-button id="join-button" [disabled]="!mySessionId && !myUserName" (click)="joinSession()" expand="block" shape="round"
+      color="primary">
+      <ion-icon slot="start" name="videocam"></ion-icon>
+      Join
+  </button>
+
+  </ion-content>
+ 
